# api-prototype

./: pyproject.toml
energy_system_api/: manage.py
energy_system_api/areas/: admin.py  models.py  views.py
energy_system_api/areas/management/commands/: add_substation_areas.py  import_lv_feeder_postcodes.py  load_postcode_sectors_geojson.py  load_postcode_units_geojson.py  load_uprns.py
energy_system_api/areas/migrations/: 0001_initial.py  0002_area_location_alter_area_geometry.py  0003_alter_area_name_alter_area_type.py  0004_area_unique_secondary_substation_name_type_location_and_more.py  0005_alter_area_id_alter_area_type.py  0006_alter_area_type.py
energy_system_api/building_performance/: admin.py  apps.py  models.py  views.py
energy_system_api/building_performance/management/commands/: import_epcs.py
energy_system_api/building_performance/migrations/: 0001_initial.py
energy_system_api/consumption/: admin.py  models.py
energy_system_api/consumption/management/commands/: __init__.py  import_lv_feeder_consumption.py
energy_system_api/consumption/migrations/: 0001_initial.py  0002_alter_consumption_options.py  0003_alter_consumption_spatial_resolution.py  0004_alter_consumption_spatial_resolution.py
energy_system_api/energy_system_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
energy_system_api/templates/: base.html  index.html
energy_system_api/templates/areas/: area_detail.html
