[tool.poetry]
name = "energy-system-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg = "^3.2.1"
pytz = "^2024.1"
uk-postcodes-parsing = "^1.1.2"
django-leaflet = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
